fix: align card

--- a/client/src/modules/card.module.css
+++ b/client/src/modules/card.module.css
@@ -1,8 +1,12 @@
 @import url('https://fonts.googleapis.com/css2?family=Abril+Fatface&family=Baloo+2:wght@400;600;800&family=PT+Serif+Caption&display=swap');
 
 .root {
+    display: flex;
+    flex-direction: column;
     font-family: 'Baloo 2', cursive;
-    margin: 10px auto;
+    height: 100%;
+    justify-content: space-between;
+    overflow: visible;
 }
 
 .link {
